src/snapshots/ascii_renderer__haiku_1_forest__tests__haiku_1_forest_42.snap
---
source: src/haiku_1_forest.rs
assertion_line: 305
expression: output
---
················································································
················································································
················································································
················································································
················································································
················································································
················································································
················································································
                                                                                
│        │         │        │         │         │         │         │        │  
│╲      ╱│╲       ╱│╲      ╱│╲       ╱│╲       ╱│╲       ╱│╲       ╱│╲      ╱│╲ 
│        │         │        │         │         │         │         │        │  
│╲      ╱│·       ╱│∙      ╱│╲    ·  ╱∙╲       ╱°·       ╱│╲       ╱│╲      ╱│°·
│∙      °│   ∙     │        │         │         │ °       │ ·       │    ∙  ∙│  
│        │    ·    │  °     │         │         │         │         │        ·∙ 
∙·       │     °  °│       °│     · ° │         °  °      │      ∙ ·∙  ∙°    │  
│       │· °·   │ ·│     │° │°    │   │   │   ∙ │  · °    │°·∙°     ││   ∙   ││∙
·╲╲╲ ╱∙╱│╲╲╲ ╱╱∙│╲╲╲  ╱╱╱│╲╲°  ╱╱╱│╲╲╲ ╱╱╱│╲╲╲° ╱╱╱∙╲╲╲  ╱╱╱│╲·╲  ╱╱╱│╲╲╲  ╱╱╱│°
│       │       │        │        │       │        │        │        │        │ 
│╲╲╲╱╱╱╱│╲╲╲╱╱╱╱│╲╲╱╱╱╱│╲╲╲╱╱╱╱│╲╲╱╱╱╱│╲╲╱╱╱╱│╲╲╲╱╱╱╱│╲╲╱╱╱╱│╲╲╲╱╱╱╱│╲╲╲╱╱╱╱│╲╲╲
│       │       │      │       │      │      │       │      │       │       │   
│       │       │      │       │      │      │       │      │       │       │   
                                                                                
════════════════════════════════════════════════════════════════════════════════
