src/snapshots/ascii_renderer__haiku_1_forest__tests__haiku_1_forest_42_t3.snap
---
source: src/haiku_1_forest.rs
assertion_line: 351
expression: output
---
················································································
················································································
················································································
················································································
················································································
················································································
················································································
················································································
                                                                                
│        │         │        │         │         │         │         │        │  
│╲      ╱│╲       ╱│╲      ╱│╲       ╱│╲       ╱│╲       ╱│╲       ╱│╲      ╱│╲ 
│        │         │        │         │         │         │         │        │  
·╲      ╱│╲·      ╱│╲∙     ╱│╲     · ╱│∙       ╱│°·      ╱│╲       ╱│╲      ╱│╲°
│ ∙      °    ∙    │        │         │         │  °      │  ·      │     ∙  ∙  
│        │     ·   │   °    │         │         │         │         │        │·∙
│∙·      │      °  °        °      · °│         │°  °     │       ∙ ·∙  ∙°   │  
∙       ││· °·  │  ·     │ °│ °   │   │   │    ∙│  │· °   │ °·∙°    ││    ∙  ││ 
°·╲╲ ╱╱∙│╲╲╲ ╱╱╱∙╲╲╲  ╱╱╱│╲╲╲° ╱╱╱│╲╲╲ ╱╱╱│╲╲╲ °╱╱╱│∙╲╲  ╱╱╱│╲╲·  ╱╱╱│╲╲╲  ╱╱╱│╲
│       │       │        │        │       │        │        │        │        │ 
│╲╲╲╱╱╱╱│╲╲╲╱╱╱╱│╲╲╱╱╱╱│╲╲╲╱╱╱╱│╲╲╱╱╱╱│╲╲╱╱╱╱│╲╲╲╱╱╱╱│╲╲╱╱╱╱│╲╲╲╱╱╱╱│╲╲╲╱╱╱╱│╲╲╲
│       │       │      │       │      │      │       │      │       │       │   
│       │       │      │       │      │      │       │      │       │       │   
                                                                                
════════════════════════════════════════════════════════════════════════════════
